--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,96 @@
 body {
-  padding: 50px;
+  /* padding: 50px; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+/* CONFIGURAÇÃO DO HEADER */
+header{
+  width: 100%;
+  max-height: 135px;
+  border-bottom: 1px solid #BB3728;
+  background-color: white;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+
+  padding: 10px;
+}
+
+header .conteudo{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo h1{
+  font-size: 1.4em;
+  color: #BC3728;
+}
+
+.logo img{
+  width: 120px;
+}
+
+nav ul{
+  display: flex;
+}
+
+nav ul li{
+  list-style: none;
+  padding: 20px;
+}
+
+nav ul li a{
+  text-decoration: none;
+  font-size: 1.5em;
+  color: #BB3728;
+}
+
+nav ul li a:hover{
+  border-bottom: 2px solid #40AB47;
+}
+
+
+main{
+  margin-top: 128px;
+  height: 100vh;
+}
+
+main .conteudo{
+  width: 80%;
+  margin: 0 auto;
+  
+}
+
+/* CONFIGURAÇÃO DO FOOTER */
+footer{
+  height: 10vh;
+  /* background-color:#838383; */
+  background-color: #bd3728;
+  text-align: center;
+}
+
+footer p{
+  text-align: center;
+  padding: 30px;
+
+  color: white;
+  font-weight: 400;
 }
