--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,15 +73,128 @@ main{
   height: 100vh;
 }
 
+main .background{
+  background: url(/images/bg2.jpg) repeat-y center;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.10;
+  z-index: -1;
+  height: 100vh;
+  width: 100vw;
+}
+
 main .conteudo{
   width: 80%;
   margin: 0 auto;
+  /* background-color: gray; */
   
+}
+
+main .conteudo form{
+  width: 100%;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+main .conteudo form input{
+  width: 80%;
+  min-width: 200px;
+  height: 5vh;
+  margin-right: 1%;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 2px solid #BC3728;
+  border-radius: 10px;
+  
+  -webkit-box-shadow: 10px 10px 9px -5px rgba(0,0,0,0.57);
+  -moz-box-shadow: 10px 10px 9px -5px rgba(0,0,0,0.57);
+  box-shadow: 10px 10px 9px -5px rgba(0,0,0,0.57);
+}
+
+main .conteudo form input:focus{
+  outline: none;
+  background-color: #f1d8d8;
+  border: 2px solid #40AB47;
+}
+
+main .conteudo form a{
+  width: 20%;
+  min-width: 60px;
+  height: 4.5vh;
+
+  background-color: #f1d8d8;
+  border: 2px solid #BC3728;
+  color: #BC3728;
+  font-weight: 600;
+  border-radius: 10px;
+
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  -webkit-box-shadow: 10px 10px 9px -5px rgba(0,0,0,0.57);
+  -moz-box-shadow: 10px 10px 9px -5px rgba(0,0,0,0.57);
+  box-shadow: 10px 10px 9px -5px rgba(0,0,0,0.57);
+}
+
+main .conteudo form a:hover{
+  background-color: #f1d8d8;
+  border: 2px solid #40AB47;
+}
+
+.cards{
+  width: 100%;
+
+  /* background-color: lightcoral; */
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 30vh 30vh 30vh;
+  grid-gap: 10px;
+}
+
+.card{
+  border-radius: 10px;
+}
+
+.card:hover{
+  border: 3px solid #40AB47;;
+}
+
+.nome{
+  background-color: rgb(255, 255, 255, 0.7);
+  color: black;
+  font-size: 1.4em;
+  width: 50%;
+  min-width: 110px;
+  text-align: center;
+  padding: 10px;
+  margin: 0px;
+}
+
+.preco{
+  background-color: black;
+  color: white;
+  font-size: 1.1em;
+  width: 18%;
+  min-width: 64px;
+  text-align: center;
+  padding: 5px;
+  margin: -8px 0px 0px 0px;
+
 }
 
 /* CONFIGURAÇÃO DO FOOTER */
 footer{
-  height: 10vh;
+  height: 15vh;
   /* background-color:#838383; */
   background-color: #bd3728;
   text-align: center;
@@ -94,3 +207,5 @@ footer p{
   color: white;
   font-weight: 400;
 }
+
+
