--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ a {
 /* CONFIGURAÇÃO DO HEADER */
 header{
   width: 100%;
-  max-height: 135px;
+  max-height: 130px;
   border-bottom: 1px solid #BB3728;
   background-color: white;
   box-sizing: border-box;
@@ -70,7 +70,7 @@ nav ul li a:hover{
 
 main{
   margin-top: 128px;
-  height: 100vh;
+ 
 }
 
 main .background{
@@ -151,22 +151,22 @@ main .conteudo form a:hover{
 }
 
 .cards{
-  width: 100%;
-
-  /* background-color: lightcoral; */
-  
+  width: 100%;  
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 30vh 30vh 30vh;
+  grid-template-rows: 30vh 30vh 30vh 30vh;
   grid-gap: 10px;
+  grid-template-areas: 'coluna coluna coluna coluna';
 }
 
 .card{
   border-radius: 10px;
+  grid-area: 'coluna';
+  height: 30vh;
 }
 
 .card:hover{
-  border: 3px solid #40AB47;;
+  border: 3px solid #40AB47;
 }
 
 .nome{
@@ -208,4 +208,104 @@ footer p{
   font-weight: 400;
 }
 
+@media(max-width: 600px){
+  header .conteudo{
+    flex-direction: column;
+  }
 
+  .logo{
+    flex-direction: column;
+  }
+
+  .logo img{
+    width: 80px;
+  }
+
+  .logo h1{
+    display: none;
+  }
+
+  nav ul{
+    padding: 0px;
+  }
+
+  nav ul li{
+    padding: 0px 10px;
+  }
+
+  .cards{
+    grid-template-columns: 1fr;
+    grid-template-rows: 30vh;
+    grid-template-areas: 'linha';
+    
+    /* grid-gap: 10px; */
+  }
+}
+
+@media(min-width: 601px) and (max-width: 920px){
+  header .conteudo{
+    flex-direction: column;
+  }
+
+  .logo{
+    flex-direction: column;
+  }
+
+  .logo img{
+    width: 80px;
+  }
+
+  .logo h1{
+    display: none;
+  }
+
+  nav ul{
+    padding: 0px;
+  }
+
+  nav ul li{
+    padding: 0px 10px;
+  }
+
+  .cards{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 30vh 30vh;;
+    grid-template-areas: 'linha' 'linha';
+    
+    /* grid-gap: 10px; */
+  }
+}
+
+@media(min-width: 921px) and (max-width: 1200px){
+  /* header .conteudo{
+    flex-direction: column;
+  }
+
+  .logo{
+    flex-direction: column;
+  }
+
+  .logo img{
+    width: 80px;
+  }
+
+  .logo h1{
+    display: none;
+  }
+
+  nav ul{
+    padding: 0px;
+  }
+
+  nav ul li{
+    padding: 0px 10px;
+  } */
+
+  .cards{
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 30vh 30vh 30vh;
+    grid-template-areas: 'linha' 'linha' 'linha';
+    
+    /* grid-gap: 10px; */
+  }
+}
